--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@
               <span></span>
               <span></span>
 <div class="pagebox">
-<?php include("leftnav.htm"); ?>
+<div class="leftnavcolumn">
+	<div class="leftnavcolumnimg" id="leftnavcolumnimg">
+		<img src="images/me.jpg" style="border-radius:200px;">
+		<p><b><u>SRUTHY GOPINADHAN</u></b></p>
+	</div>
+	<div class="leftnavcolumnlinks">	
+  		<a href="#" onclick="toggle_visibility('home');">About Me</a>
+  		<a href="#" onclick="toggle_visibility('skills');">Skills</a>
+  		<a href="#" onclick="toggle_visibility('education');">Education</a>
+  		<a href="#" onclick="toggle_visibility('experience');">Experience</a>
+  		<a href="#" onclick="toggle_visibility('contact');">Contact</a>
+  	</div>	
+</div>
 
 <div class="rightmaincolumn" >
 
